# agent-gaia

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  test-websocket.html
config/: config-dev.yml  config-local.yml  config-prod.yml
docs/: API-kimi.md  API.md
docs/mvp1/: AgentGaia_UseCase_Spec_V4.1.docx
docs/plan/: MVP1_PLAN.md  MVP1_W1_SPEC.md  week1-plan.html
docs/plan/phase1/: task1.md
docs/tech-spec/: TECH_SPEC_CLAUDE.md  TECH_SPEC_GEMINI.md  TECH_SPEC_GROK.md  TECH_SPEC_VIS.html  TECH_SPEC_kimi.md  USE_CASE_1.md
docs/use_case/: AgentGaia_UseCase_Spec_V4.docx
src/: main.py
src/api/routes/: auth.py  chat.py  upload.py
src/core/: auth.py  conversation_repository.py  database.py  llm_router.py  model_cost_repository.py  retry.py  settings.py  user_repository.py
src/models/: schemas.py
src/services/: file_processor.py  rag_service.py  web_search.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: index.html
src/utils/: logger.py  pdf_parser.py  token_counter.py
tests/: test_chat.py
